<resources>
    <string name="app_name">Reacon Gym</string>
    <string name="reacon_gym">Reacon Gym</string>
    <string name="logo">logo</string>
    <string name="description">Don’t give up on your dreams, or your dreams will give up on you.</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="body_weight">Body Weight (kg)</string>
    <string name="view_plans">View Plans</string>
    <string name="body_height">Body Height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="description2">Physical fitness is not only one of the most important keys to a healthy body, it is the basis of dynamic and creative intellectual activity.</string>
    <string name="update_data">Update Data</string>
    <string name="height">Height :</string>
    <string name="weight1">Weight :</string>
    <string name="age1">Age :</string>
    <string name="status1">Status :</string>
    <string name="bmi_value1">BMI value :</string>
    <string name="diet_plan">Diet Plan</string>
    <string name="workout_schedule">Workout Schedule</string>
    <string name="title_activity_diat_plan">DiatPlanActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save_data">Save Data</string>
    <string name="your_workout_plan_for_the_bmi_value">Your Workout Plan for the BMI Value</string>
    <string name="enter_server_ip_address">Enter Server IP Address</string>
    <string name="_192_168_8_111">192.168.8.111</string>
    <string name="save_ip">Save IP</string>
</resources>