<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reacon_gym"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/teal_200"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="center_horizontal"
        android:textSize="14sp"
        android:textStyle="bold|italic" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <EditText
            android:text="ruwanmx.developer@gmail.com"
            android:id="@+id/log_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"/>
        <EditText
            android:text="1234"
            android:id="@+id/log_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="8dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_weight="1">
            <Button
                android:id="@+id/log_reg_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:layout_marginEnd="4dp"/>
            <Button
                android:id="@+id/log_log_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:layout_marginStart="4dp"
                android:backgroundTint="@color/teal_200"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/ip1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:hint="@string/enter_server_ip_address"
                android:text="@string/_192_168_8_111" />

            <Button
                android:id="@+id/save_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_ip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>