<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".UpdateActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reacon_gym"
        android:textColor="@color/teal_200"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/description2"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingEnd="8dp">

            <EditText
                android:id="@+id/bdy_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body_height"
                android:inputType="number" />

            <EditText
                android:id="@+id/bdy_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/body_weight"
                android:inputType="number" />

            <EditText
                android:id="@+id/bdy_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/out_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/height"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/out_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/weight1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/out_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/age1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/out_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/status1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/out_bmi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/bmi_value1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bdy_cal_bmi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/calculate_bmi" />

                <Button
                    android:id="@+id/bdy_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/save_data" />

                <Button
                    android:id="@+id/bdy_diet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/diet_plan" />

                <Button
                    android:id="@+id/bdy_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/teal_200"
                    android:text="@string/workout_schedule" />
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/empty" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>